[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/AchievementsHub.gd" id="1"]

[node name="AchievementsHub" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.03, 0.04, 0.07, 1)

[node name="Layout" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 60

[node name="Panel" type="PanelContainer" parent="Layout"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ContentMargin" type="MarginContainer" parent="Layout/Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 32

[node name="Column" type="VBoxContainer" parent="Layout/Panel/ContentMargin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Layout/Panel/ContentMargin/Column"]
text = "Centro de logros"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Layout/Panel/ContentMargin/Column"]
text = "Revisa tus desafíos desbloqueados y las metas pendientes."
theme_override_colors/font_color = Color(0.75, 0.8, 0.9, 1)
horizontal_alignment = 1

[node name="Divider" type="HSeparator" parent="Layout/Panel/ContentMargin/Column"]

[node name="ScrollPanel" type="PanelContainer" parent="Layout/Panel/ContentMargin/Column"]
size_flags_vertical = 3

[node name="ScrollMargin" type="MarginContainer" parent="Layout/Panel/ContentMargin/Column/ScrollPanel"]
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Scroll" type="ScrollContainer" parent="Layout/Panel/ContentMargin/Column/ScrollPanel/ScrollMargin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
vertical_scroll_mode = 2

[node name="AchievementList" type="VBoxContainer" parent="Layout/Panel/ContentMargin/Column/ScrollPanel/ScrollMargin/Scroll"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)
theme_override_constants/separation = 10

[node name="EmptyLabel" type="Label" parent="Layout/Panel/ContentMargin/Column"]
unique_name_in_owner = true
text = "Todavía no registras logros especiales."
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.6, 0.65, 0.75, 1)

[node name="Buttons" type="HBoxContainer" parent="Layout/Panel/ContentMargin/Column"]
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="Layout/Panel/ContentMargin/Column/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
text = "Volver"

[node name="ResetButton" type="Button" parent="Layout/Panel/ContentMargin/Column/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
text = "Restablecer progreso"

